--- a/css/styleIbg.css
+++ b/css/styleIbg.css
@@ -142,7 +142,7 @@ main {
   border-radius: 10px;
 }
 
-.IbaguéI {
+.IbagueI {
   display: flex;
   align-items: left;
   margin-top: 50px;
@@ -155,7 +155,7 @@ main {
   text-align: justify;
   width: 45%;
   margin-left: 53%;
-  margin-top: -37.5%;
+  margin-top: -33.5%;
   border: 1px solid #999;
   padding: 10px;
   border-radius: 10px;
