--- a/Responisve/1680/Index.css
+++ b/Responisve/1680/Index.css
@@ -1,170 +1,171 @@
-@media screen and (max-width: 1680px) {
-  .logo_cabecera {
-    margin-top: 1.9%;
-    margin-left: 40%;
-  }
-  .redes_sociales {
-    margin-top: -10%;
-    margin-left: 1%;
-  }
-  .contactanos {
-    font-size: 22px;
-    margin-top: -10%;
-    margin-left: 1.8%;
-  }
-  .apoyado {
-    margin-top: -10%;
-    margin-left: 83%;
-    font-size: 25px;
-  }
-  .user {
-    margin-top: -10%;
-    margin-left: 94%;
-  }
-  .menu__conteiner {
-    width: 73%;
-    max-width: 1800px;
-  }
-  .menu__link {
-    padding: 0 60px;
-    display: flex;
-    height: 100%;
-    align-items: center;
-    font-size: 25px;
-  }
-  .menu__link--inside {
-    padding: 5px 20px 25px;
-  }
-  .menu__nestings {
-    left: 55px;
-    width: 230px;
-  }
-
-  /* slider */
-  .slider {
-    margin-left: 15%;
-    margin-right: 10%;
-    height: 700px;
-  }
-  .slider img {
-    width: 1200px;
-    height: 600px;
-    border-radius: 40px;
-  }
-  .linea {
-    margin-top: -30px;
-    width: 1500px;
-    margin-left: 80px;
-    height: 5px;
-    background-color: #d09f50;
-  }
-  /* descripcion */
-  .container {
-    padding: 1em;
-    overflow: hidden;
-  }
-  .galeria {
-    position: absolute;
-    color: black;
-    opacity: 1;
-    margin-top: 350px;
-    margin-left: 40px;
-    font-size: 30px;
-  }
-  .producto {
-    font-size: 40px;
-    margin-left: 44%;
-  }
-  .title {
-    margin-left: 3%;
-    display: inline-block;
-    margin-top: 3%;
-    font-size: 20px;
-  }
-  .item {
-    margin: 5rem;
-    padding: 20px;
-    color: white;
-    float: left;
-  }
-  #imagen > a > img {
-    width: 400px;
-    height: 400px;
-    border-radius: 20px;
-    margin-top: -60px;
-  }
-  #texto {
-    color: black;
-    margin-top: 1%;
-    width: 55%;
-    margin-left: 1%;
-    font-size: 17px;
-  }
-  .lineaP {
-    margin-top: -10px;
-    width: 1500px;
-    margin-left: 80px;
-    height: 5px;
-    background-color: #d09f50;
-  }
-  /* Tarjetas*/
-  .contenedor {
-    height: 450px;
-    width: 250px;
-    margin: auto;
-    -webkit-perspective: 700;
-    margin-bottom: 50px;
-  }
-  .titulo {
-    margin-left: 44%;
-  }
-  .carta {
-    top: 30px;
-    height: 100%;
-    width: 100%;
-    position: relative;
-    transform-style: preserve-3d;
-    transition: 2s;
-    margin-left: 15%;
-  }
-  .carta:hover {
-    transform: rotateY(180deg);
-  }
-  .lado {
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-    position: absolute;
-  }
-  .frente > img {
-    width: 100%;
-    height: 100%;
-  }
-  .atras {
-    transform: rotateY(180deg);
-    background-color: gray;
-  }
-  /* footer*/
-  footer {
-    height: 175px;
-  }
-  .redes_socialesF {
-    margin-top: -7%;
-    margin-left: 85%;
-  }
-  .contactanosF {
-    margin-top: -7%;
-    margin-left: 1.8%;
-    font-size: 28px;
-  }
-  .logo_pie {
-    margin-left: 40%;
-  }
-  .separador {
-    height: 50px;
-  }
-  .frase {
-    font-size: 30px;
-    margin-left: 31%;
-  }
+.logo_cabecera {
+  margin-top: 1.9%;
+  margin-left: 40%;
+}
+.redes_sociales {
+  margin-top: -10%;
+  margin-left: 1%;
+}
+.contactanos {
+  font-size: 22px;
+  margin-top: -10%;
+  margin-left: 1.8%;
+}
+.apoyado {
+  margin-top: -10%;
+  margin-left: 83%;
+  font-size: 25px;
+}
+.user {
+  margin-top: -10%;
+  margin-left: 94%;
+}
+.menu__conteiner {
+  width: 73%;
+  max-width: 1800px;
+}
+.menu__link {
+  padding: 0 60px;
+  display: flex;
+  height: 100%;
+  align-items: center;
+  font-size: 25px;
+}
+.menu__link--inside {
+  padding: 5px 20px 25px;
+}
+.menu__nestings {
+  left: 55px;
+  width: 230px;
+}
+.menu__nestings_2 {
+  left: 55px;
+  width: 200px;
+}
+/* slider */
+.slider {
+  margin-left: 15%;
+  margin-right: 10%;
+  height: 700px;
+}
+.slider img {
+  width: 1200px;
+  height: 600px;
+  border-radius: 40px;
+}
+.linea {
+  margin-top: -30px;
+  width: 1500px;
+  margin-left: 80px;
+  height: 5px;
+  background-color: #d09f50;
+}
+/* descripcion */
+.container {
+  padding: 1em;
+  overflow: hidden;
+}
+.galeria {
+  position: absolute;
+  color: black;
+  opacity: 1;
+  margin-top: 350px;
+  margin-left: 40px;
+  font-size: 30px;
+}
+.producto {
+  font-size: 40px;
+  margin-left: 44%;
+}
+.title {
+  margin-left: 3%;
+  display: inline-block;
+  margin-top: 3%;
+  font-size: 20px;
+}
+.item {
+  margin: 5rem;
+  padding: 20px;
+  color: white;
+  float: left;
+}
+#imagen > a > img {
+  width: 400px;
+  height: 400px;
+  border-radius: 20px;
+  margin-top: -60px;
+}
+#texto {
+  color: black;
+  margin-top: 1%;
+  width: 55%;
+  margin-left: 1%;
+  font-size: 17px;
+}
+.lineaP {
+  margin-top: -10px;
+  width: 1500px;
+  margin-left: 80px;
+  height: 5px;
+  background-color: #d09f50;
+}
+/* Tarjetas*/
+.contenedor {
+  height: 450px;
+  width: 250px;
+  margin: auto;
+  -webkit-perspective: 700;
+  margin-bottom: 50px;
+}
+.titulo {
+  margin-left: 44%;
+}
+.carta {
+  top: 30px;
+  height: 100%;
+  width: 100%;
+  position: relative;
+  transform-style: preserve-3d;
+  transition: 2s;
+  margin-left: 15%;
+}
+.carta:hover {
+  transform: rotateY(180deg);
+}
+.lado {
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  position: absolute;
+}
+.frente > img {
+  width: 100%;
+  height: 100%;
+}
+.atras {
+  transform: rotateY(180deg);
+  background-color: gray;
+}
+/* footer*/
+footer {
+  height: 175px;
+}
+.redes_socialesF {
+  margin-top: -7%;
+  margin-left: 85%;
+}
+.contactanosF {
+  margin-top: -7%;
+  margin-left: 1.8%;
+  font-size: 28px;
+}
+.logo_pie {
+  margin-left: 40%;
+}
+.separador {
+  height: 50px;
+}
+.frase {
+  font-size: 30px;
+  margin-left: 31%;
 }
