--- a/Responisve/1380/AcercaNosotros.css
+++ b/Responisve/1380/AcercaNosotros.css
@@ -49,21 +49,25 @@
   padding: 10px;
 }
 .separador1 {
-  margin-top: 120px;
+  margin-top: 170px;
   width: 1150px;
   margin-left: 100px;
   height: 5px;
   background-color: #d09f50;
 }
 .segunda_imagen {
-  margin-left: -450px;
+  margin-left: -470px;
   margin-top: 50px;
   width: 500px;
   height: 300px;
 }
+.segunda_imagen {
+  width: 500px;
+  height: 350px;
+}
 .parrafo2 {
   width: 650px;
-  margin-top: -250px;
+  margin-top: -360px;
   margin-left: 35%;
   border: 1px solid #999;
   border-radius: 10px;
