--- a/Responisve/1380/Index.css
+++ b/Responisve/1380/Index.css
@@ -133,7 +133,7 @@
 }
 .atras {
   transform: rotateY(180deg);
-  background-color: gray;
+  background-color: rgba(199, 190, 190, 0.993);
 }
 .atras > p {
   text-align: justify;
